aggregate parcel data

--- a/example.ipynb
+++ b/example.ipynb
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -457,9 +457,7 @@
        "      <th>right_OS_count</th>\n",
        "      <th>right_OS</th>\n",
        "      <th>...</th>\n",
-       "      <th>right_BUILT_COVERAGE</th>\n",
-       "      <th>front_SB</th>\n",
-       "      <th>back_SB</th>\n",
+       "      <th>right_plot_SEQ_SB_depth</th>\n",
        "      <th>OS_count</th>\n",
        "      <th>OS</th>\n",
        "      <th>SB_count</th>\n",
@@ -467,6 +465,8 @@
        "      <th>H</th>\n",
        "      <th>HW</th>\n",
        "      <th>BUILT_COVERAGE</th>\n",
+       "      <th>plot_SEQ_SB</th>\n",
+       "      <th>plot_SEQ_SB_depth</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>street_index</th>\n",
@@ -507,9 +507,7 @@
        "      <td>1</td>\n",
        "      <td>50.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>300.0</td>\n",
+       "      <td>19.240138</td>\n",
        "      <td>2</td>\n",
        "      <td>50.000000</td>\n",
        "      <td>0</td>\n",
@@ -517,6 +515,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>14.569433</td>\n",
+       "      <td>19.240138</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -531,9 +531,7 @@
        "      <td>1</td>\n",
        "      <td>50.000000</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>300.0</td>\n",
+       "      <td>18.013827</td>\n",
        "      <td>2</td>\n",
        "      <td>50.000000</td>\n",
        "      <td>0</td>\n",
@@ -541,6 +539,8 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>10.089375</td>\n",
+       "      <td>18.013827</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -555,9 +555,7 @@
        "      <td>1</td>\n",
        "      <td>27.593446</td>\n",
        "      <td>...</td>\n",
-       "      <td>4.983602</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>300.0</td>\n",
+       "      <td>15.660855</td>\n",
        "      <td>2</td>\n",
        "      <td>38.796723</td>\n",
        "      <td>1</td>\n",
@@ -565,6 +563,8 @@
        "      <td>28.0</td>\n",
        "      <td>1.014734</td>\n",
        "      <td>2.491801</td>\n",
+       "      <td>10.099458</td>\n",
+       "      <td>15.660855</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -579,9 +579,7 @@
        "      <td>1</td>\n",
        "      <td>26.229691</td>\n",
        "      <td>...</td>\n",
-       "      <td>11.208418</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>300.0</td>\n",
+       "      <td>14.181025</td>\n",
        "      <td>2</td>\n",
        "      <td>38.114846</td>\n",
        "      <td>1</td>\n",
@@ -589,6 +587,8 @@
        "      <td>28.0</td>\n",
        "      <td>1.067493</td>\n",
        "      <td>5.604209</td>\n",
+       "      <td>9.996735</td>\n",
+       "      <td>27.214984</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -603,9 +603,7 @@
        "      <td>1</td>\n",
        "      <td>25.412462</td>\n",
        "      <td>...</td>\n",
-       "      <td>13.650682</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>300.0</td>\n",
+       "      <td>23.319708</td>\n",
        "      <td>2</td>\n",
        "      <td>37.706231</td>\n",
        "      <td>1</td>\n",
@@ -613,6 +611,8 @@
        "      <td>28.0</td>\n",
        "      <td>1.101822</td>\n",
        "      <td>6.825341</td>\n",
+       "      <td>9.996961</td>\n",
+       "      <td>32.571699</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -627,9 +627,7 @@
        "      <td>1</td>\n",
        "      <td>25.198986</td>\n",
        "      <td>...</td>\n",
-       "      <td>17.065157</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>300.0</td>\n",
+       "      <td>21.502775</td>\n",
        "      <td>2</td>\n",
        "      <td>24.588764</td>\n",
        "      <td>1</td>\n",
@@ -637,6 +635,8 @@
        "      <td>28.0</td>\n",
        "      <td>1.111156</td>\n",
        "      <td>11.811294</td>\n",
+       "      <td>9.997186</td>\n",
+       "      <td>29.171899</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -651,9 +651,7 @@
        "      <td>1</td>\n",
        "      <td>26.764536</td>\n",
        "      <td>...</td>\n",
-       "      <td>17.680783</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>300.0</td>\n",
+       "      <td>20.930499</td>\n",
        "      <td>2</td>\n",
        "      <td>20.742455</td>\n",
        "      <td>1</td>\n",
@@ -661,6 +659,8 @@
        "      <td>28.0</td>\n",
        "      <td>1.046160</td>\n",
        "      <td>16.722367</td>\n",
+       "      <td>9.997412</td>\n",
+       "      <td>25.070909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -675,9 +675,7 @@
        "      <td>1</td>\n",
        "      <td>28.184169</td>\n",
        "      <td>...</td>\n",
-       "      <td>14.796689</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>300.0</td>\n",
+       "      <td>18.023673</td>\n",
        "      <td>2</td>\n",
        "      <td>21.444652</td>\n",
        "      <td>1</td>\n",
@@ -685,6 +683,8 @@
        "      <td>28.0</td>\n",
        "      <td>0.993466</td>\n",
        "      <td>15.669026</td>\n",
+       "      <td>9.997637</td>\n",
+       "      <td>21.234980</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -699,9 +699,7 @@
        "      <td>1</td>\n",
        "      <td>29.961410</td>\n",
        "      <td>...</td>\n",
-       "      <td>7.374529</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>300.0</td>\n",
+       "      <td>19.832244</td>\n",
        "      <td>2</td>\n",
        "      <td>22.325652</td>\n",
        "      <td>1</td>\n",
@@ -709,6 +707,8 @@
        "      <td>28.0</td>\n",
        "      <td>0.934535</td>\n",
        "      <td>13.593521</td>\n",
+       "      <td>9.997863</td>\n",
+       "      <td>24.072938</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
@@ -723,9 +723,7 @@
        "      <td>1</td>\n",
        "      <td>31.357056</td>\n",
        "      <td>...</td>\n",
-       "      <td>6.903187</td>\n",
-       "      <td>300.0</td>\n",
-       "      <td>300.0</td>\n",
+       "      <td>20.432292</td>\n",
        "      <td>2</td>\n",
        "      <td>23.015854</td>\n",
        "      <td>1</td>\n",
@@ -733,10 +731,12 @@
        "      <td>28.0</td>\n",
        "      <td>0.892941</td>\n",
        "      <td>13.355549</td>\n",
+       "      <td>9.998088</td>\n",
+       "      <td>25.162272</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>10 rows × 24 columns</p>\n",
+       "<p>10 rows × 30 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -766,46 +766,46 @@
        "0                         0      NaN     NaN      NaN            19.812513   \n",
        "0                         0      NaN     NaN      NaN            19.807911   \n",
        "\n",
-       "              right_OS_count   right_OS  ...  right_BUILT_COVERAGE  front_SB  \\\n",
-       "street_index                             ...                                   \n",
-       "0                          1  50.000000  ...              0.000000     300.0   \n",
-       "0                          1  50.000000  ...              0.000000     300.0   \n",
-       "0                          1  27.593446  ...              4.983602     300.0   \n",
-       "0                          1  26.229691  ...             11.208418     300.0   \n",
-       "0                          1  25.412462  ...             13.650682     300.0   \n",
-       "0                          1  25.198986  ...             17.065157     300.0   \n",
-       "0                          1  26.764536  ...             17.680783     300.0   \n",
-       "0                          1  28.184169  ...             14.796689     300.0   \n",
-       "0                          1  29.961410  ...              7.374529     300.0   \n",
-       "0                          1  31.357056  ...              6.903187     300.0   \n",
+       "              right_OS_count   right_OS  ...  right_plot_SEQ_SB_depth  \\\n",
+       "street_index                             ...                            \n",
+       "0                          1  50.000000  ...                19.240138   \n",
+       "0                          1  50.000000  ...                18.013827   \n",
+       "0                          1  27.593446  ...                15.660855   \n",
+       "0                          1  26.229691  ...                14.181025   \n",
+       "0                          1  25.412462  ...                23.319708   \n",
+       "0                          1  25.198986  ...                21.502775   \n",
+       "0                          1  26.764536  ...                20.930499   \n",
+       "0                          1  28.184169  ...                18.023673   \n",
+       "0                          1  29.961410  ...                19.832244   \n",
+       "0                          1  31.357056  ...                20.432292   \n",
        "\n",
-       "              back_SB  OS_count         OS  SB_count         SB     H  \\\n",
-       "street_index                                                            \n",
-       "0               300.0         2  50.000000         0        NaN   NaN   \n",
-       "0               300.0         2  50.000000         0        NaN   NaN   \n",
-       "0               300.0         2  38.796723         1  27.593446  28.0   \n",
-       "0               300.0         2  38.114846         1  26.229691  28.0   \n",
-       "0               300.0         2  37.706231         1  25.412462  28.0   \n",
-       "0               300.0         2  24.588764         1  25.198986  28.0   \n",
-       "0               300.0         2  20.742455         1  26.764536  28.0   \n",
-       "0               300.0         2  21.444652         1  28.184169  28.0   \n",
-       "0               300.0         2  22.325652         1  29.961410  28.0   \n",
-       "0               300.0         2  23.015854         1  31.357056  28.0   \n",
+       "              OS_count         OS  SB_count         SB     H        HW  \\\n",
+       "street_index                                                             \n",
+       "0                    2  50.000000         0        NaN   NaN       NaN   \n",
+       "0                    2  50.000000         0        NaN   NaN       NaN   \n",
+       "0                    2  38.796723         1  27.593446  28.0  1.014734   \n",
+       "0                    2  38.114846         1  26.229691  28.0  1.067493   \n",
+       "0                    2  37.706231         1  25.412462  28.0  1.101822   \n",
+       "0                    2  24.588764         1  25.198986  28.0  1.111156   \n",
+       "0                    2  20.742455         1  26.764536  28.0  1.046160   \n",
+       "0                    2  21.444652         1  28.184169  28.0  0.993466   \n",
+       "0                    2  22.325652         1  29.961410  28.0  0.934535   \n",
+       "0                    2  23.015854         1  31.357056  28.0  0.892941   \n",
        "\n",
-       "                    HW  BUILT_COVERAGE  \n",
-       "street_index                            \n",
-       "0                  NaN        0.000000  \n",
-       "0                  NaN        0.000000  \n",
-       "0             1.014734        2.491801  \n",
-       "0             1.067493        5.604209  \n",
-       "0             1.101822        6.825341  \n",
-       "0             1.111156       11.811294  \n",
-       "0             1.046160       16.722367  \n",
-       "0             0.993466       15.669026  \n",
-       "0             0.934535       13.593521  \n",
-       "0             0.892941       13.355549  \n",
+       "              BUILT_COVERAGE  plot_SEQ_SB  plot_SEQ_SB_depth  \n",
+       "street_index                                                  \n",
+       "0                   0.000000    14.569433          19.240138  \n",
+       "0                   0.000000    10.089375          18.013827  \n",
+       "0                   2.491801    10.099458          15.660855  \n",
+       "0                   5.604209     9.996735          27.214984  \n",
+       "0                   6.825341     9.996961          32.571699  \n",
+       "0                  11.811294     9.997186          29.171899  \n",
+       "0                  16.722367     9.997412          25.070909  \n",
+       "0                  15.669026     9.997637          21.234980  \n",
+       "0                  13.593521     9.997863          24.072938  \n",
+       "0                  13.355549     9.998088          25.162272  \n",
        "\n",
-       "[10 rows x 24 columns]"
+       "[10 rows x 30 columns]"
       ]
      },
      "execution_count": 9,
